--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:  monospace;
+    font-family: 'Times New Roman', Times, serif;
   }
   
   .container {
@@ -28,14 +28,30 @@
     margin-bottom: 20px;
   }
 
-  
   .perfil img {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     margin-right: 10px;
   }
-
+  
+  .nombre-iconos p {
+    display: flex;
+    align-items: center;
+    margin: 0;
+  }
+  
+  .iconos {
+    margin-left: 10px;
+  }
+  
+  .iconos img {
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+    cursor: pointer;
+  }
+  /* Separador */
   .separador {
     border-bottom: 1px solid #ddd;
     margin-bottom: 20px;
